--- a/style.css
+++ b/style.css
@@ -25,12 +25,16 @@ canvas {
   text-align: center;
 }
 #controls{
-  margin-top: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 #sw-time{
+  margin-top:0px;
+  color:white;
+}
+a{
+  font-family:Arial, Helvetica, sans-serif;
   color:white;
 }
 button {
